fix contact form; navbar home link on mobile; thanks page

--- a/src/components/variables.scss
+++ b/src/components/variables.scss
@@ -33,7 +33,7 @@ $primary-invert: $kaldi-red-invert;
 $midnight-black: black;
 $midnight-gray: #1a1a1a;
 $content-gray: lightgray;
-$content-green: #14ff72;
+$content-green: #0fb853;
 $content-title: white;
 $post-text-color: white;
 $body-color: #333;
